# cmarmotta

./: CMakeLists.txt  LICENSE.txt  README.md  main.cc
client/: CMakeLists.txt  client.cc
cmake/: FindGRPC.cmake
java/: pom.xml
java/backend/: pom.xml
java/backend/src/main/java/org/apache/marmotta/platform/backend/cmarmotta/: CMarmottaProvider.java
java/client/: pom.xml
java/client/src/main/java/org/apache/marmotta/cmarmotta/sail/: CMarmottaSail.java  CMarmottaSailConnection.java  CMarmottaValueFactory.java  ClosableResponseStream.java
java/client/src/main/proto/: sail.proto
java/client/src/test/java/org/apache/marmotta/cmarmotta/sail/test/: CMarmottaSailTest.java  TestSailConnection.java
java/model/: pom.xml
java/model/src/main/java/org/apache/marmotta/cmarmotta/model/: ProtoBNode.java  ProtoDatatypeLiteral.java  ProtoLiteralBase.java  ProtoNamespace.java  ProtoStatement.java  ProtoStringLiteral.java  ProtoURI.java
java/model/src/main/proto/: model.proto
java/model/src/test/java/org/apache/marmotta/cmarmotta/model/test/: StatementTest.java  URITest.java
java/webapp/: pom.xml
model/: CMakeLists.txt  model.proto  rdf_model.cc  rdf_model.h  rdf_operators.cc  rdf_operators.h
parser/: CMakeLists.txt  rdf_parser.cc  rdf_parser.h
persistence/: leveldb_persistence.cc  leveldb_service.h
serializer/: CMakeLists.txt  base_serializer.cc  proto_serializer.cc  proto_serializer.h  rdf_serializer.cc  rdf_serializer.h  serializer.cc  serializer.h  serializer_proto.h
service/: CMakeLists.txt  leveldb_persistence.cc  persistence.cc  persistence.h  sail.proto  server.cc  service.cc  service.h  sparql.cc  sparql.h
sharding/: CMakeLists.txt  server.cc  sharding.cc  sharding.h  sparql.cc  sparql.h
sparql/: CMakeLists.txt  rasqal_adapter.cc  rasqal_adapter.h  rasqal_model.cc  rasqal_model.h  sparql.proto
test/: CMakeLists.txt  SparqlTest.cc  StatementTest.cc
util/: CMakeLists.txt  iterator.h  split.cc  split.h  threadpool.cc  threadpool.h
